<resources
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name" translatable="false">Rview</string>
    <string name="app_description">A Gerrit client application for Android.</string>
    <string name="notifications_default_channel_name" translatable="false">Rview - <xliff:g id="repository" example="CyanogenMod">%1$s</xliff:g> - <xliff:g id="account" example="test">%2$s</xliff:g></string>
    <string name="notifications_default_channel_description">Rview notifications</string>
    <string name="bcp47_locale_tag">en-US</string>
    <string name="action_previous">Previous</string>
    <string name="action_next">Next</string>
    <string name="action_done">Done</string>
    <string name="action_delete">Delete</string>
    <string name="action_create">Create</string>
    <string name="action_close">Close</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_let_start">Let\'s start</string>
    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>
    <string name="action_add">Add</string>
    <string name="action_restore">Restore</string>
    <string name="action_change">Change</string>
    <string name="action_edit">Edit</string>
    <string name="action_move">Move</string>
    <string name="action_publish">Publish</string>
    <string name="action_discard">Discard</string>
    <string name="action_save">Save</string>
    <string name="action_retry">Retry</string>
    <string name="action_yes">Yes</string>
    <string name="action_no">No</string>
    <string name="action_open_with">Open with</string>
    <string name="action_continue">Continue</string>
    <string name="action_assign">Assign</string>
    <string name="action_set">Set</string>
    <string name="action_rename">Rename</string>
    <string name="action_attach">Attach</string>
    <string name="menu_all_changes_category">All changes</string>
    <string name="menu_open">Open</string>
    <string name="menu_merged">Merged</string>
    <string name="menu_abandoned">Abandoned</string>
    <string name="menu_my_menu_category">My menu</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_drafts">Drafts</string>
    <string name="menu_draft">Draft</string>
    <string name="menu_draft_comments">Draft comments</string>
    <string name="menu_starred">Starred</string>
    <string name="menu_watched">Watched</string>
    <string name="menu_edits">Edits</string>
    <string name="menu_my_filters_category">My filters</string>
    <string name="menu_other_changes_category">Other changes</string>
    <string name="menu_trending">Trending</string>
    <string name="menu_following">Following</string>
    <string name="menu_account_settings">Settings</string>
    <string name="menu_account_status">Status</string>
    <string name="menu_account_notifications">Notifications</string>
    <string name="menu_account_stats">Statistics</string>
    <string name="menu_account_server_info">Server info</string>
    <string name="menu_account_password">Password</string>
    <string name="menu_drop_account">Drop account</string>
    <string name="menu_account_category">Account</string>
    <string name="menu_other_accounts_category">Other accounts</string>
    <string name="menu_add_account">Add account</string>
    <string name="menu_help">Help</string>
    <string name="menu_search">Search</string>
    <string name="menu_options">Options</string>
    <string name="menu_diff_options">Diff options</string>
    <string name="menu_filter_options">Filter options</string>
    <string name="menu_info_category">Information</string>
    <string name="menu_share">Share</string>
    <string name="menu_privacy">Privacy policy</string>
    <string name="menu_source_code">Source code</string>
    <string name="menu_about">About</string>
    <string name="menu_delete_all">Delete all</string>
    <string name="menu_mark_as_read">Mark as read</string>
    <string name="menu_edit_options">Edit options</string>
    <string name="menu_view_options">View options</string>
    <string name="exception_browser_not_found">No browser detected. Can\'t open <xliff:g id="url" example="http://example.com">%1$s</xliff:g></string>
    <string name="exception_unsupported_server_version">Gerrit server version is unsupported</string>
    <string name="exception_invalid_endpoint">Endpoint is not a Gerrit instance</string>
    <string name="exception_data_not_available">Data is not available yet</string>
    <string name="exception_no_network_available">No network connectivity detected</string>
    <string name="exception_server_cannot_be_reached">Server instance cannot be reached</string>
    <string name="exception_server_ssl_issue">Server reports some SSL issue</string>
    <string name="exception_server_connection_issue">Server reports some connectivity issue</string>
    <string name="exception_unsupported_guess_mode">Server instance doesn\'t support guest accounts</string>
    <string name="exception_invalid_user_password">Invalid user or password</string>
    <string name="exception_invalid_request">Invalid request</string>
    <string name="exception_insufficient_permissions">Insufficient permissions</string>
    <string name="exception_request_data_not_found">Request data not found</string>
    <string name="exception_conflict">Operation cannot be performed. There is a conflict.</string>
    <string name="exception_bad_request">Bad request</string>
    <string name="exception_request_error">Request error</string>
    <string name="exception_operation_failed">Operation failed</string>
    <string name="exception_cannot_handle_link">Cannot handle link: <xliff:g id="url" example="http://example.com">%1$s</xliff:g></string>
    <string name="exception_cannot_share_link">No activity found to share link with</string>
    <string name="exception_item_not_found">Item not found</string>
    <string name="exception_attachment_provider_not_logged">Attachment account was revoked. Attachment provider was disabled.</string>
    <string name="account_suggest_format">\u0022<xliff:g id="committer_name" example="John Doe">%1$s</xliff:g> \u003c<xliff:g id="committer_email" example="john.doe@example.com">%2$s</xliff:g>\u003e\u0022</string>
    <string name="committer_format"><xliff:g id="committer_name" example="John Doe">%1$s</xliff:g> \u003c<xliff:g id="committer_email" example="john.doe@example.com">%2$s</xliff:g>\u003e, <xliff:g id="commit_date" example="2 days ago">%3$s</xliff:g></string>
    <string name="added_vs_deleted"><xliff:g id="added" example="243 added">%1$s</xliff:g>, <xliff:g id="deleted" example="243 deleted">%2$s</xliff:g></string>
    <string name="account_build_bot_system_name" translatable="false">Gerrit Code Review</string>
    <string name="account_anonymous_coward">Name of user not set</string>
    <string name="account_deletion_title">Account deletion</string>
    <string name="account_deletion_message">This action will delete the account and all information associated to it.</string>
    <string name="account_deletion_confirm_message">Account deleted</string>
    <string name="account_exists">Account exists</string>
    <string name="account_choose_title">Choose account</string>
    <string name="account_wizard_welcome_page_title">Welcome \u0022Rviewer\u0022</string>
    <string name="account_wizard_welcome_page_message">We know you are willing to start reviewing changes, but first you need to setup a Gerrit repository account.\n\nIt will take just a few seconds and we will assist you in the process.</string>
    <string name="account_wizard_account_setup_page_title">Account setup</string>
    <string name="account_wizard_account_setup_page_message">This wizard will guide you in the setup of a new Gerrit repository account.\n\nIt will take just a few seconds.</string>
    <string name="account_wizard_repository_page_title">Repository</string>
    <string name="account_wizard_repository_page_message1">Please enter the name and location of the Gerrit instance.</string>
    <string name="account_wizard_repository_page_message2">Or choose between some <xliff:g id="link" example="predefined">%1$s</xliff:g> repositories.</string>
    <string name="account_wizard_repository_page_message2_predefined">predefined</string>
    <string name="account_wizard_repository_page_name">Name</string>
    <string name="account_wizard_repository_page_url">URL</string>
    <string name="account_wizard_repository_page_trust_all_certificates">Trust all server certificates</string>
    <string name="account_wizard_account_page_title">Account</string>
    <string name="account_wizard_account_page_message">Choose the way you want to access the &lt;b&gt;<xliff:g id="repository_name" example="CyanogenMod">%1$s</xliff:g>&lt;/b&gt; repository.</string>
    <string name="account_wizard_account_authentication_failure_page_title">Authentication failure</string>
    <string name="account_wizard_account_authentication_failure_page_message">Access to &lt;b&gt;<xliff:g id="repository_name" example="CyanogenMod">%1$s</xliff:g>&lt;/b&gt; repository was denied. Username or password expired or changed.</string>
    <string name="account_wizard_account_page_authenticated_access">Authenticated access</string>
    <string name="account_wizard_account_page_authenticated_access_hint">If you don\'t know your username or password, click <xliff:g id="link" example="here">%1$s</xliff:g> to obtain or generate a new one. If you don\'t have an account yet, you can sign-in <xliff:g id="link" example="here">%2$s</xliff:g>. Use the help menu to obtain more information related to account authentication.</string>
    <string name="change_details_subject">Subject</string>
    <string name="change_details_project">Project</string>
    <string name="change_details_branch">Branch</string>
    <string name="change_details_topic">Topic</string>
    <string name="account_settings_display_category">Display</string>
    <string name="account_settings_home_page">Home page</string>
    <string name="account_settings_fetched_items">Number of fetched items</string>
    <string name="account_settings_display_format">Display format</string>
    <string name="account_settings_highlight_unreviewed">Highlight unreviewed changes</string>
    <string name="account_settings_messages_folded">Fold messages</string>
    <string name="account_settings_external_category">External viewers</string>
    <string name="account_settings_use_custom_tabs">Open external links in a custom tab</string>
    <string name="options_diff_mode">Diff mode</string>
    <string name="options_diff_mode_unified">Unified</string>
    <string name="options_diff_mode_side_by_side">Side by side</string>
    <string name="options_diff_mode_image">Image</string>
    <string name="options_wrap_mode">Wrap mode</string>
    <string name="options_wrap_mode_on">Wrap lines</string>
    <string name="options_wrap_mode_off">Unwrap lines</string>
    <string name="options_text_size">Text size</string>
    <string name="options_text_size_smaller">Smaller</string>
    <string name="options_text_size_normal">Normal</string>
    <string name="options_text_size_bigger">Bigger</string>
    <string name="options_highlight">Highlight</string>
    <string name="options_highlight_tabs">Tabs</string>
    <string name="options_highlight_trailing_whitespaces">Trailing whitespaces</string>
    <string name="options_highlight_intraline_diffs">Intraline diffs</string>
    <string name="create_new_change_is_private">Private</string>
    <string name="create_new_change_is_wip">Work in progress</string>
</resources>