<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2016 Jorge Ruesga

     Licensed under the Apache License, ServerVersion 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
 -->
<layout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View" />
        <import type="com.ruesga.rview.gerrit.model.Features" />

        <variable name="model" type="com.ruesga.rview.fragments.NewChangeDialogFragment.Model" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/change_details_project"
                app:errorEnabled="false">
                <com.ruesga.rview.widget.DelayedAutocompleteTextView
                    android:id="@+id/project"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="?android:attr/textColorSecondary"
                    android:text="@={model.project}"
                    android:textSize="14sp"
                    android:maxLines="1"
                    android:selectAllOnFocus="true"
                    android:completionThreshold="1"
                    app:delay="300"
                    android:inputType="textNoSuggestions" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/change_details_branch"
                app:errorEnabled="false">
                <com.ruesga.rview.widget.DelayedAutocompleteTextView
                    android:id="@+id/branch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="?android:attr/textColorSecondary"
                    android:text="@={model.branch}"
                    android:textSize="14sp"
                    android:maxLines="1"
                    android:selectAllOnFocus="true"
                    android:completionThreshold="1"
                    app:delay="300"
                    android:inputType="textNoSuggestions" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/change_details_topic"
                app:errorEnabled="false">
                <com.ruesga.rview.widget.DelayedAutocompleteTextView
                    android:id="@+id/topic"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="?android:attr/textColorSecondary"
                    android:text="@={model.topic}"
                    android:textSize="14sp"
                    android:maxLines="1"
                    android:selectAllOnFocus="true"
                    android:completionThreshold="1"
                    app:delay="0"
                    android:inputType="textNoSuggestions" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/change_details_subject"
                app:errorEnabled="false">
                <com.ruesga.rview.widget.DelayedAutocompleteTextView
                    android:id="@+id/subject"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="?android:attr/textColorSecondary"
                    android:text="@={model.subject}"
                    android:minLines="1"
                    android:maxLines="6"
                    android:singleLine="false"
                    android:textSize="14sp"
                    android:selectAllOnFocus="true"
                    android:completionThreshold="1"
                    app:delay="0"
                    android:inputType="textMultiLine"
                    tools:ignore="Deprecated"/>
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.SwitchCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:checked="@={model.isPrivate}"
                app:bindToFeature="@{Features.CHANGE_FLAGS}"
                app:bindToBoolean="@{Boolean.TRUE}"
                android:text="@string/create_new_change_is_private" />

            <androidx.appcompat.widget.SwitchCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:checked="@={model.isWorkInProgress}"
                app:bindToFeature="@{Features.CHANGE_FLAGS}"
                app:bindToBoolean="@{Boolean.TRUE}"
                android:text="@string/create_new_change_is_wip" />
        </LinearLayout>
    </ScrollView>
</layout>